# python-api-sdk

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
src/paykassa/: dto.py  merchant.py  payment.py  struct.py
src/paykassa/async_/: merchant.py  payment.py
tests/: test_dto.py  test_merchant.py  test_payment.py
