[metadata]
name = paykassa-api-sdk
version = 1.1.0
author = Vadim Selyakov
author_email = selyakovadim@gmail.com
description = Paykassa API & SCI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://paykassa.pro
project_urls =
    Source = https://github.com/paykassa-dev/python-api-sdk
    Documentation = https://paykassa.pro/en/developers/
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.7,<3

[options.packages.find]
where = src
